<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/edited1"
    tools:context=".Login.SignUpActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:text="@string/textView2"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:textStyle="bold" />
    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="370dp"
        android:layout_height="440dp"
        android:background="@drawable/border"
        app:cardCornerRadius="30dp"
        app:cardElevation="10dp"
        android:layout_marginTop="50dp"
        app:layout_constraintTop_toBottomOf="@id/linearLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:id="@+id/linearLayout3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:paddingStart="15dp"
                android:text="@string/name"
                android:textSize="20sp"
                android:textStyle="bold"
                tools:ignore="RtlSymmetry" />

            <EditText
                android:id="@+id/edtName"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:backgroundTint="@color/blue"
                android:drawablePadding="10dp"
                android:hint="@string/knowledgeNest"
                android:inputType="text"
                android:paddingStart="10dp"
                android:textColorHint="#A2A2A2"
                android:textSize="17sp"
                tools:ignore="RtlSymmetry" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:paddingStart="15dp"
                android:text="@string/email"
                android:textSize="20sp"
                android:textStyle="bold"
                tools:ignore="RtlSymmetry" />

            <EditText
                android:id="@+id/edtEmail"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:backgroundTint="@color/blue"
                android:drawablePadding="10dp"
                android:hint="@string/example"
                android:inputType="textEmailAddress"
                android:paddingStart="10dp"
                android:textColorHint="#A2A2A2"
                android:textSize="17sp"
                tools:ignore="RtlSymmetry" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:paddingStart="15dp"
                android:text="@string/password"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/edtPassword"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:backgroundTint="@color/blue"
                android:drawablePadding="10dp"
                android:hint="@string/star"
                android:inputType="textPassword"
                android:paddingStart="10dp"
                android:textColorHint="#A2A2A2"
                android:textSize="17sp"
                tools:ignore="RtlSymmetry" />

            <Button
                android:id="@+id/btnSignUp"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="29dp"
                android:backgroundTint="@color/purple"
                android:clickable="true"
                android:focusable="true"
                android:text="@string/signUp"
                android:textSize="23sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/alreadyHaveAnAccount"
                    android:textColor="@color/black"
                    android:textSize="12dp" />

                <TextView
                    android:id="@+id/alreadyAccount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:focusable="true"
                    android:paddingStart="5dp"
                    android:text="@string/logInNow"
                    android:textColor="@color/blue"
                    android:textSize="17sp"
                    android:textStyle="bold"
                    tools:ignore="RtlSymmetry" />
            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>
