<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/signinbkg"
    tools:context=".Login.SignInActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:text="@string/textView3"
            android:textSize="30sp"
            android:textStyle="bold" />
    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="370dp"
        android:layout_height="420dp"
        android:layout_marginTop="100dp"
        android:background="@drawable/border"
        app:cardCornerRadius="30dp"
        app:cardElevation="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.487"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linearLayout">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:paddingStart="15dp"
                android:text="@string/email"
                android:textSize="20sp"
                android:textStyle="bold"
                tools:ignore="RtlSymmetry" />

            <EditText
                android:id="@+id/edtEmail"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:backgroundTint="@color/purple"
                android:drawablePadding="10dp"
                android:hint="@string/example"
                android:inputType="textEmailAddress"
                android:paddingStart="10dp"
                android:textColorHint="#A2A2A2"
                android:textSize="17sp"
                tools:ignore="RtlSymmetry" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:paddingStart="15dp"
                android:text="@string/password"
                android:textSize="20sp"
                android:textStyle="bold"
                tools:ignore="RtlSymmetry" />

            <EditText
                android:id="@+id/edtPassword"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:backgroundTint="@color/purple"
                android:drawablePadding="10dp"
                android:hint="@string/star"
                android:inputType="textPassword"
                android:paddingStart="10dp"
                android:textColorHint="#A2A2A2"
                android:textSize="17sp"
                tools:ignore="RtlSymmetry" />
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <TextView

                    android:id="@+id/forgotPassword"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:focusable="true"
                    android:paddingStart="5dp"
                    android:text="@string/forgetP"
                    android:textColor="@color/orange"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    tools:ignore="RtlSymmetry" />
            </LinearLayout>

            <Button
                android:id="@+id/btnSignIn"
                android:layout_width="match_parent"
                android:text="@string/signIn"
                android:layout_height="60dp"
                android:layout_marginTop="40dp"
                android:backgroundTint="@color/blue"
                android:clickable="true"
                android:focusable="true"
                android:textSize="23sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="23dp"
                    android:text="@string/dontHaveAnAccount"
                    android:textColor="@color/black" />

                <TextView
                    android:id="@+id/createAccount"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:clickable="true"
                    android:focusable="true"
                    android:paddingStart="5dp"
                    android:text="@string/signUp"
                    android:textColor="@color/purple"
                    android:textSize="17sp"
                    android:textStyle="bold"
                    tools:ignore="RtlSymmetry" />
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>
