<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="24dp"
    android:background="@drawable/another2">

    <!-- Title -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/terms_and_conditions"
        android:textSize="22sp"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_marginBottom="16dp"
        android:textColor="@color/black"/>

    <!-- Content -->

    <!-- Agree Button -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:fillViewport="true">

        <TextView
            android:id="@+id/termsContent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:lineSpacingMultiplier="1.2"
            android:padding="8dp"
            android:text="@string/terms_and_conditions_content"
            android:textColor="@color/black"
            android:textSize="16sp" />
    </ScrollView>

    <Button
        android:id="@+id/btnAccept"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="@string/i_agree"
        android:textAllCaps="false"
        android:textSize="18sp"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/white"
        android:textColor="@android:color/black"
        android:textStyle="bold"/>
</LinearLayout>